# adversarial-debate

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CODEBASE_AUDIT.md  CODEBASE_CLEANUP_RECOMMENDATIONS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  SUPPORT.md  action.yml  docker-compose.sandbox.yml  docker-compose.yml  progress.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml  security-analysis.yml
docs/: agents.md  api.md  architecture.md  data-structures.md  demo.md  index.md  pipeline.md
docs/concepts/: attack-coverage.md  how-it-works.md  security-model.md
docs/developers/: event-sourcing.md  extending-agents.md  extending-formatters.md  extending-providers.md  python-api.md  testing.md
docs/getting-started/: first-analysis.md  installation.md  quickstart.md
docs/guides/: cli-reference.md  configuration.md  interpreting-results.md  output-formats.md
docs/integration/: baseline-tracking.md  ci-cd.md
docs/reference/: agents.md  architecture.md  data-structures.md
docs/support/: faq.md  glossary.md  troubleshooting.md
examples/: README.md  basic_analysis.py  ci_integration.py  quickstart.py  sandbox_execution.py  single_agent.py
examples/mini-app/: README.md  app.py
examples/vulnerable_samples/: command_injection.py  sql_injection.py
examples/workflows/: security-analysis.yml
schemas/: config.schema.json
scripts/: check_import_cycles.py  demo.sh
src/adversarial_debate/: __init__.py  attack_plan.py  baseline.py  cli.py  cli_commands.py  cli_output.py  cli_provider.py  completions.py  config.py  exceptions.py  logging.py  path_filter.py  results.py  verdict.py  watch.py
tests/: __init__.py  conftest.py
tests/benchmarks/: __init__.py  test_performance.py
tests/integration/: __init__.py  test_cli.py  test_examples.py
tests/property/: __init__.py  test_cache_properties.py  test_sandbox_security.py
tests/unit/: __init__.py  test_attack_plan.py  test_baseline.py  test_cache_manager.py  (+18 more)
(+57 files in other folders)
