[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adversarial-debate"
version = "0.1.0"
description = "AI Red Team Security Testing Framework using adversarial agent mesh"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Gareth Roberts" }
]
keywords = [
    "security",
    "red-team",
    "adversarial-testing",
    "llm",
    "vulnerability-scanner",
    "owasp",
    "code-analysis"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "anthropic>=0.18.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "docker>=7.0.0",
]

[project.optional-dependencies]
openai = [
    "openai>=1.0.0",
]
all-providers = [
    "openai>=1.0.0",
]
dev = [
    "build>=1.2.0",
    "bandit>=1.7.7",
    "detect-secrets>=1.4.0",
    "pip-audit>=2.7.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.100.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/dr-gareth-roberts/adversarial-debate"
Repository = "https://github.com/dr-gareth-roberts/adversarial-debate"
Issues = "https://github.com/dr-gareth-roberts/adversarial-debate/issues"

[project.scripts]
adversarial-debate = "adversarial_debate.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/adversarial_debate"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "S"]
ignore = ["S101", "S603", "S607"]  # Allow assert, subprocess

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
